src/test/fail/no_return_fail.egern
func square(n: int): int {
    print(4 * 4);
}

square(4);
